<!--
  ~ Copyright Melvin Diez (c) 2016.
  ~ This file is part of MyEDT for Android.
  ~
  ~     MyEDT is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Foobar is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>
    <string name="app_name">MyEDT</string>
    <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
    <string name="navigation_drawer_close">Fermer le menu de navigation</string>
    //HOME
    <string name="home_first_message">Bienvenue, actualisez pour voir l\'EDT</string>
    //Options
    <string name="options_select_promo">Choissisez votre promotion :</string>
    <string name="options_enter">Entrez le code de votre promo</string>
    <string name="ok">Ok</string>
    //HOME_Menu
    <string name="menu_nextw">Semaine Suivante</string>
    <string name="menu_prevw">Semaine Précedente</string>
    <string name="menu_actw">Semaine Actuelle</string>
    //Drawer
    <string name="draw_home">Accueil</string>
    <string name="action_settings">Changer de Promo</string>
    <string name="draw_about">A propos</string>
    //About
    <string name="about_version">MyEDT Version 1.0.0</string>
    <string name="about_text">Cette application NON OFFICIELLE a été développée à partir de myedt.enac.fr. Ainsi, si ce site web venait à changer de structure l\'application ne serait plus fonctionnelle ! Vous utilisez cette application à vos risques et périls, si vous trouvez un bug ou un défaut de fonctionnement vous pouvez me contacter en utilisant les moyens courants. Vous êtes libres d\'améliorer, de modifier, voire de porter sur iOS l\'application en vous rendant sur https://github.com/spitfire06/my-edt .\nCrédit photographique : Melvin Diez 2016 Tous droits réservés. \n \nCe programme est un logiciel libre ; vous pouvez le redistribuer ou le modifier suivant les termes de la GNU General Public License telle que publiée par la Free Software Foundation ; soit la version 3 de la licence, soit (à votre gré) toute version ultérieure.  Ce programme est distribué dans l\'espoir qu\'il sera utile, mais SANS AUCUNE GARANTIE ; sans même la garantie tacite de QUALITÉ MARCHANDE ou d\'ADÉQUATION à UN BUT PARTICULIER. Consultez la GNU General Public License pour plus de détails.  Vous devez avoir reçu une copie de la GNU General Public License en même temps que ce programme ; si ce n\'est pas le cas, consultez http://www.gnu.org/licenses .</string>

    //Misc
    <string name="misc_apptitle">MyEDT Android</string>
    <string name="misc_author">Par Melvin Diez TS15B</string>
    <string name="title_activity_apropos">A Propos...</string>
    <string name="comment_picture">Avion à l\'aterrissage à LFMN, M-KATE, pris en Août 2016</string>

</resources>
