<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Melvin Diez (c) 2016.
  ~ This file is part of MyEDT for Android.
  ~
  ~     MyEDT is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Foobar is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.sonline.enacmyedt.APropos"
    tools:showIn="@layout/activity_apropos">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="textEnd"
        android:text="@string/about_version"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/imageabout"
        android:layout_height="150dp"
        android:background="@mipmap/about"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/comment_picture" />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/imageabout"
        android:scrollbars="vertical"
        android:fillViewport="true">


    </ScrollView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/about_text"
        android:id="@+id/textView5"
        android:layout_below="@+id/imageabout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
